# adventofcode-2022

./: Cargo.toml
.cargo/: config
src/: cli.rs  lib.rs
