[package]
name = "adventofcode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc_common"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dirs = "4.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.23"